Add some error dialogs for various fatal errors that can happen during launch of Camino. Addresses bug 201506.